@@ -1,4 +1,8 @@
 
+2009-08-03  Douglas Soares de Andrade  <douglas@archlinux.org>
+
+	* Adding the examples folder
+
 2009-08-01  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Updated for x86_64: 1.9.0
